# l2spread

./: Cargo.toml  build.rs
src/: binance_ob.rs  bitstamp_ob.rs  client.rs  exchange_ob.rs  server.rs
src/orderbook/: mod.rs
