[package]
name = "l2spread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.5"
tokio = { version = "1.0", features = ["full"] }
prost = "0.8"
async-stream = "0.3.5"
futures-core = "0.3.28"
futures-util = "0.3.10"

[build-dependencies]
tonic-build = "0.5"
